@@ -12,12 +12,14 @@ Should handle these soon.
 FOR THE NEXT RELEASE
 ====================
 
-- Implement a save/restore root-frame system. And use it on error reset or for undo/redo.
+- Add toolbar modules in contrib/toolbar.lisp. Any help or request on adding the modules
+  you want in your toolbar is very welcome.
 
-- Add a toolbar in contrib/
 
 MAYBE
 =====
+
+- Implement a save/restore root-frame system. And use it on error reset or for undo/redo.
 
 - Add a tabbar layout : save some space on top/left... of the frame and display clickable
     children name.
